--- a/sass/base/components/_header.scss
+++ b/sass/base/components/_header.scss
@@ -234,6 +234,9 @@ header.fixed-top-bar{
     }
     .hero-header h2{
         margin-top:6rem;
-        margin-bottom:-3rem;
+        margin-bottom:-2rem;
+    }
+    .hero-header .image-back-blob + div{
+        
     }
 }
